--- a/src/components/css/categories.module.css
+++ b/src/components/css/categories.module.css
@@ -1,7 +1,7 @@
 #container {
     width: 95%;
     height: 150px;
-    margin: auto;
+    margin: 30px auto auto auto;
     display: flex;
     align-items: center;
     overflow-x: scroll;
